--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -24,10 +23,15 @@
     "detect-file-type": "^0.2.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "file-type": "^19.0.0",
     "formidable": "^3.5.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
